fixed error detection problem when executing VBS command